[gd_scene load_steps=2 format=2]

[ext_resource path="res://GUI/Button.gd" type="Script" id=1]

[node name="Button" type="Control"]
pause_mode = 2
margin_right = 128.0
margin_bottom = 128.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Sprite_selected" type="Sprite" parent="."]
visible = false

[node name="Label" type="Label" parent="."]
margin_right = 128.0
margin_bottom = 128.0
align = 1
valign = 1
[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
